<resources>
    <string name="app_name">MiHipoteca App</string>
    <string name="txt_btn_simular_hipoteca">COMPARAR HIPOTECAS</string>
    <string name="txt_btn_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="txt_btn_registrarse">REGISTRARSE</string>
    <string name="txt_btn_aplicar_cambios">APLICAR CAMBIOS</string>
    <string name="txt_btn_pasar_a_premium">PASAR A PREMIUM</string>
    <string name="txt_btn_añadir_hipoteca">AÑADIR HIPOTECA</string>
    <string name="txt_btn_editar_hipoteca">EDITAR HIPOTECA</string>
    <string name="txt_btn_enviar_problema">ENVIAR</string>
    <string name="txt_aplicar_filtro">Aplicar filtros</string>
    <string name="txt_btn_recuperar_contrasenia">RECUPERAR CONTRASEÑA</string>
    <string name="txt_btn_comparar_hipoteca">COMPARAR HIPOTECA</string>
    <string name="txt_btn_cuadro_amortizacion">CUADRO DE AMORTIZACIÓN</string>
    <string name="txt_btn_amortizar_antes">AMORTIZAR ANTES</string>
    <string name="label_correo_electronico">Correo electrónico</string>
    <string name="label_ejemplo_correo">ejemplo@email.com</string>
    <string name="label_contrasenia">Contraseña</string>
    <string name="label_contrasenia_nueva">Contraseña nueva</string>
    <string name="label_ejemplo_contrasenia">************</string>
    <string name="label_recuperar_contrasenia"><u><b>Recuperar contraseña</b></u></string>
    <string name="label_recuperar_contrasenia_titulo">Recuperar contraseña</string>
    <string name="label_no_tienes_cuenta">¿No tienes cuenta? <u><b>Regístrate aquí</b></u></string>
    <string name="label_registro">Registro</string>
    <string name="label_datos_de_acceso">Datos de acceso</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_repetir_contrasenia">Repetir contraseña</string>
    <string name="label_repetir_contrasenia_nueva">Repetir contraseña nueva</string>
    <string name="label_acepto_terminos">Acepto los términos y condiciones</string>
    <string name="label_selecciona_avatar">Escoge un avatar</string>
    <string name="titulo_actividad_principal">Mis hipotecas</string>
    <string name="label_configuracion_usuario">Perfil y ajustes</string>
    <string name="label_notificar_problema">Notificar problema</string>
    <string name="label_cambiar_datos">Modificar perfil</string>
    <string name="label_pasar_premium">Pasar a premium</string>
    <string name="label_acercaDe">Acerca de</string>
    <string name="label_pol_privacidad">Pol. de privacidad</string>
    <string name="label_eliminar_usuario">Eliminar cuenta</string>
    <string name="label_modificar_perfil">Modificar perfil</string>
    <string name="label_nuevo_seguimiento">Nuevo \n seguimiento</string>
    <string name="label_combobox_comunidad">¿En qué provincia se encuentra?</string>
    <string name="label_tipo_vivienda">¿Vivienda de régimen general o de protección oficial?</string>
    <string name="label_antiguedad_vivienda">¿Vivienda nueva o de segunda mano?</string>
    <string name="label_vivienda_nueva">Vivienda nueva</string>
    <string name="label_vivienda_segunda_mano">Vivienda de segunda mano</string>
    <string name="label_vivienda_regimen_general">Vivienda régimen general</string>
    <string name="label_vivienda_proteccion_oficial">Vivienda protección oficial</string>
    <string name="label_precio_vivienda">¿Precio de la vivienda?</string>
    <string name="label_cantidad_abonada">¿Cantidad abonada por el comprador?</string>
    <string name="label_plazo_prestamo_a_pagar">¿Plazo a pagar de préstamo? (en años)</string>
    <string name="label_fecha_inicio_hipoteca">¿Fecha de inicio de la hipoteca?</string>
    <string name="label_año_hipoteca_actual">¿Año de hipoteca actual?</string>
    <string name="label_mes_actual">¿Mes de hipoteca actual?</string>
    <string name="label_informar_problema">Notificar problema</string>
    <string name="label_has_detectado">¿Has detectado algún fallo que quieras que solucionemos o quieres sugerirnos cualquier mejora?</string>
    <string name="label_comentanoslo">¡COMÉNTANOSLO!</string>
    <string name="label_texto_error">Escribe aquí lo que quieras \ndecirnos...</string>
    <string name="label_aniadir_captura">Añade captura (recomendado) </string>
    <string name="label_filtros">Filtros</string>
    <string name="label_precio_vivienda_sin">Precio de la vivienda</string>
    <string name="label_primer_pago">Primer pago</string>
    <string name="label_plazo_prestamo_a_pagar_sin">Plazo a pagar de préstamo</string>
    <string name="label_hipoteca_fija">Hipoteca fija</string>
    <string name="label_hipoteca_variable">Hipoteca variable</string>
    <string name="label_hipoteca_mixta">Hipoteca mixta</string>
    <string name="label_check_parte_fija_variab">Hipoteca mixta</string>
    <string name="label_tipo_hipoteca">Tipo de hipoteca</string>
    <string name="label_vinculaciones">Vinculaciones</string>
    <string name="label_seguro_vida">Seguro de vida</string>
    <string name="label_seguro_hogar">Seguro del hogar</string>
    <string name="label_cuenta_nomina">Cuenta nómina</string>
    <string name="label_plan_pensiones">Plan de pensiones</string>
    <string name="label_comisiones_no">Comisiones que no quieres</string>
    <string name="label_comision_apertura">Comisión por apertura</string>
    <string name="label_comision_gastos_formalizacion">Comisión por gastos de formalizacion</string>
    <string name="label_comision_subrogacion">Comisión por subrogación</string>
    <string name="label_comision_estudio_gestion">Comisión por estudio y gestión</string>
    <string name="label_comision_amortizacion_anticipada">Comisión por amortización anticipada</string>
    <string name="label_comision_cancelacion">Comisión por cancelación</string>
    <string name="label_bancos">Bancos</string>
    <string name="label_banco">Banco asociado</string>
    <string name="label_pasate_premium">¡Pásate a premium!</string>
    <string name="label_indicar_correo_recuperar_contra">Indica tu correo electrónico para recuperar la contraseña</string>
    <string name="label_plan_actual">Tu plan actual</string>
    <string name="label_ventajas_premium_1">Desbloquea las ventajas que proporciona el plan premium</string>
    <string name="label_ventajas_premium_2">Realiza el seguimiento de tus hipotecas sin límites</string>
    <string name="label_ventajas_premium_3">Desbloquea la opción de ayudas gráficas para comprender la evolución de tu hipoteca</string>
    <string name="label_plan_premium">Mi HipotecaApp Premium</string>
    <string name="label_info_premium">Sin anuncios. Lleva el seguimiento de más de una hipoteca: mayor número y diversidad de datos, gráficos individuales, y mucho más...</string>
    <string name="label_coste_premium_tachado">5.95€</string>
    <string name="label_coste_premium_rebajado">2.95€</string>
    <string name="label_cierre_sesion">Cerrar sesión</string>
    <string name="label_porcentaje_fijo">Porcentaje fijo (TIN)</string>
    <string name="label_duracion_primer_porcentaje">Duración del primer porcentaje aplicado (en meses)</string>
    <string name="label_check_parte_fija_mixta">¿Su hipoteca tiene una primera parte fija?</string>
    <string name="label_porcentaje_variable_diferencial">Diferencial</string>
    <string name="label_cada_cuanto_revision">¿Cuando se realiza la revisión para actualizar con el euribor?</string>
    <string name="label_primer_porcentaje_variable">Primer porcentaje aplicado</string>
    <string name="label_seis_meses">6 meses</string>
    <string name="label_un_anio">1 año</string>
    <string name="label_cuantos_anios_fijo">¿Cuántos años son fijos en la hipoteca?</string>
    <string name="label_gastos">GASTOS</string>
    <string name="label_explicacion_gastos">Indica los gastos que tienes que pagar, en caso de no tener que pagar nada introduce 0.</string>
    <string name="label_notaria">Gastos notaría</string>
    <string name="label_gastos_totales">Gastos totales</string>
    <string name="label_gastos_registro">Gastos registro</string>
    <string name="label_gestoria">Gastos gestoría</string>
    <string name="label_tasacion">Gastos tasación</string>
    <string name="label_comisiones">Comisiones</string>
    <string name="label_gastos_vinculaciones">Vinculaciones anuales</string>
    <string name="label_nombre_hipoteca">Nombre de la hipoteca</string>
    <string name="label_comparador_hipotecas">Comparador de hipotecas</string>
    <string name="label_tipo_de_vivienda">¿Qué tipo de vivienda va a ser?</string>
    <string name="label_viv_nueva_seg_mano">¿Vivienda nueva o de segunda mano?</string>
    <string name="label_viv_nueva">Vivienda nueva</string>
    <string name="label_viv_seg_mano">Vivienda de segunda mano</string>
    <string name="label_seguimiento">Seguimiento</string>
    <string name="label_tipo_de_hipoteca">Tipo de Hipoteca: </string>
    <string name="label_dinero_que_falta_por_pagar">Dinero a pagar:</string>
    <string name="label_tiempo_restante">Tiempo restante:</string>
    <string name="label_cuota_de">CUOTA DE </string>
    <string name="label_ingresos">Ingresos mensuales:</string>
    <string name="label_ofertas_con_detalle">Obtener mejores ofertas con detalle</string>
    <string name="label_cuota">CUOTA</string>
    <string name="ip">http://147.96.81.245:5000</string>
    <string name="correo_en_bd">El correo introducido ya está registrado</string>
    <string name="necesario_aceptar_terminos">Acepta los términos y condiciones para poder registrarte</string>
    <string name="nombre_vacio">Es necesario introducir un nombre</string>
    <string name="correo_vacio">Es necesario introducir un correo eléctronico</string>
    <string name="contra_vacia">Es necesario introducir una contraseña</string>
    <string name="contras_no_coinciden">Las contraseñas no coinciden</string>
    <string name="correo_no_existente">El correo introducido no está registrado</string>
    <string name="correo_incorrecto">El correo introducido no es correcto</string>
    <string name="contra_incorrecta">La contraseña es incorrecta</string>
    <string name="completar_campos">Completa todos los campos!</string>
    <string name="formato_correo_incorrecto">El correo formato del correo introducido no es correcto</string>
    <string name="error_enviar_mensaje_recuperar_contra">No se pudo enviar un correo electrónico para restablecer su contraseña</string>
    <string name="comunidad_vacia">Debes seleccionar una comunidad</string>
    <string name="precio_vacio">El campo precio vivienda no puede estar vacío</string>
    <string name="cantidad_abonada_vacio">El campo cantidad abonada no puede estar vacío</string>
    <string name="plazo_vacio">El campo plazo no puede estar vacío</string>
    <string name="ingresos_vacio">El campo ingresos no puede estar vacío</string>
    <string name="cantidad_mayor_igual_cero">La cantidad debe ser mayor que 0</string>
    <string name="precio_menor_abonado">El precio de la vivienda debe ser mayor que la cantidad abonada</string>
    <string name="porcentaje_mayor_igual_cero">El porcentaje debe ser mayor que 0</string>
    <string name="duracion_mayor_igual_cero">La duracion debe ser mayor que 0</string>
    <string name="plazo_menor_mayor">El campo plazo debe estar entre 1 y 40</string>
    <string name="anio_actual_vacio">El campo año actual no puede estar vacío</string>
    <string name="nombre_hipoteca_vacio">El campo nombre hipoteca no puede estar vacío</string>
    <string name="porcentaje_vacio">Los porcentajes no pueden estar vacíos</string>
    <string name="duracion_vacio">El campo duración no puede estar vacío</string>
    <string name="anios_mayor_cero">El campo duración no puede ser menor o igual a 0</string>
    <string name="ahorro_mayor_80_por_ciento">La cantidad financiada por el banco no puede ser mayor al 80% del precio de la vivienda.</string>
</resources>