<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimularHipoteca.Filtros"
    android:background="@color/background_aplicacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/close_icon_filtr"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_filtros"
        android:textSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_precio_vivienda_sin"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <SeekBar
        android:id="@+id/seekBar_precio"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:max="500000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:progress="200000"
        android:thumbOffset="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16dp"
            android:layout_gravity="center"/>

        <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/label_primer_pago"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_precio" />

    <SeekBar
        android:id="@+id/seekBar_primer_pago"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:max="500000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:progress="200000"
        android:thumbOffset="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/tv_primer_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16dp"
            android:layout_gravity="center"/>
    <TextView

        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_plazo_prestamo_a_pagar_sin"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_primer_pago" />

    <SeekBar
        android:id="@+id/seekBar_plazo_prestamo"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:max="50"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:progress="25"
        android:thumbOffset="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/tv_plazo_prestamo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="16dp"
            android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_tipo_hipoteca"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_plazo_prestamo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <CheckBox
            android:id="@+id/checkBoxFija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hipoteca_fija" />

        <CheckBox
            android:id="@+id/checkBoxVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hipoteca_variable" />

        <CheckBox
            android:id="@+id/checkBoxMixta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hipoteca_mixta" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_vinculaciones"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        >
        <CheckBox
            android:id="@+id/checkBox_seguro_vida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_seguro_vida"
            android:layout_marginEnd="20dp"/>
        <CheckBox
            android:id="@+id/checkBox_seguro_hogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_seguro_hogar" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        >
        <CheckBox
            android:id="@+id/checkBox_cuenta_nomina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cuenta_nomina"
            android:layout_marginEnd="20dp"/>
        <CheckBox
            android:id="@+id/checkBox_plan_pensiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_plan_pensiones" />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_comisiones_no"
            android:textSize="20dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_comision_apertura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comision_apertura" />
                <CheckBox
                    android:id="@+id/checkBox_comision_gastos_formalizacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comision_gastos_formalizacion" />
                <CheckBox
                    android:id="@+id/checkBox_comision_subrogacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comision_subrogacion" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/checkBox_comision_estudio_gestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comision_estudio_gestion" />
                <CheckBox
                    android:id="@+id/checkBox_comision_amrotizacion_anticipada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comision_amortizacion_anticipada" />
                <CheckBox
                    android:id="@+id/checkBox_comision_cancelacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comision_cancelacion" />

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bancos"
            android:textSize="20dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"/>
        <Spinner
            android:id="@+id/sp_bancos"
            android:layout_width="297dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
             />
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btn_aplicar_filtros"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/btn_bordes_redondos"
            android:text="@string/txt_aplicar_filtro"/>

    </LinearLayout>
</ScrollView>