<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioRegistrado.InformacionUsuario.InformarDeUnProblema"
    android:background="@color/background_aplicacion">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/close_icon_notificar_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="10dp"
        android:src="@drawable/close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/label_informar_problema"
        android:fontFamily="@font/text_bold"
        android:textColor="@color/titulo2"
        android:shadowColor="@color/dark_blue"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:text="@string/label_has_detectado"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="23dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/label_comentanoslo"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/edit_texto_error"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/rounded_edit_text"
        android:fontFamily="@font/allerta"
        android:hint="@string/label_texto_error"
        android:paddingHorizontal="50dp"
        android:paddingBottom="50dp"
        android:padding="12dp"
        android:layout_margin="35dp"
        android:gravity="top"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"/>

    <Button
        android:id="@+id/btn_enviar_problema"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bordes_redondos"
        android:text="@string/txt_btn_enviar_problema"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_texto_error" />



</androidx.constraintlayout.widget.ConstraintLayout>